Fixed misaligned selection when the node wraps to another line.

--- a/src/components/tree/tree.css
+++ b/src/components/tree/tree.css
@@ -260,6 +260,9 @@
 	height: 100%;
 	pointer-events: none;
 
+	/* When nodes wrap to the new line */
+	vertical-align: top;
+
 	&::after {
 		content: "";
 		position: absolute;
